// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import un fichier de l'EDI Sacha RAI example-an-1.xml 1`] = `
{
  "AcquittementNonAcquittement": {
    "Destinataire": {
      "EmailPartenaire": "email@test.ts",
      "LibellePartenaire": "LLP",
      "Sigle": "LPP",
    },
    "Emetteur": {
      "EmailPartenaire": "example@agriculture.gouv.fr",
      "LibellePartenaire": "DD",
      "Sigle": "DD",
    },
    "MessageAcquittement": [
      {
        "DateAcquittement": "2023-01-05T21:21:34",
        "NomFichier": "RA01111",
      },
      {
        "DateAcquittement": "2023-01-05T21:21:33",
        "NomFichier": "RA01112",
      },
    ],
    "MessageParametres": {
      "CodeReferentielPrescripteur": "SIGAL",
      "CodeScenario": "E.D.I. SIGAL/LABOS",
      "NomFichier": "AN011111",
      "NomLogicielCreation": "SIGAL",
      "TypeFichier": "AN01",
      "VersionLogicielCreation": "4.0",
      "VersionReferencePrescripteur": "RP01111",
      "VersionReferenceStandardisees": "DS01111",
      "VersionScenario": "1.0.1",
    },
  },
}
`;

exports[`import un fichier de l'EDI Sacha RAI example-an-2.xml 1`] = `
{
  "AcquittementNonAcquittement": {
    "Destinataire": {
      "EmailPartenaire": "email@test.ts",
      "LibellePartenaire": "LVD",
      "Sigle": "LVD",
    },
    "Emetteur": {
      "EmailPartenaire": "example@agriculture.gouv.fr",
      "LibellePartenaire": "DSEN",
      "Sigle": "DSEN",
    },
    "MessageAcquittement": [
      {
        "DateAcquittement": "2023-01-20T09:22:53",
        "NomFichier": "RA011111",
      },
    ],
    "MessageNonAcquittement": [
      {
        "DateNonAcquittement": "2023-01-20T09:23:42",
        "LibelleMotif": "Numéro DAP non défini en base. [1111]<DialogueResultatType><DialogueRetourInterventionAvecDAP><NumeroDAP>",
        "NomFichier": "RA011112",
        "TypeMotif": "INFO",
      },
    ],
    "MessageParametres": {
      "CodeReferentielPrescripteur": "SIGAL",
      "CodeScenario": "E.D.I. SIGAL/LABOS",
      "NomFichier": "AN011111",
      "NomLogicielCreation": "SIGAL",
      "TypeFichier": "AN01",
      "VersionLogicielCreation": "4.0",
      "VersionReferencePrescripteur": "RP011111",
      "VersionReferenceStandardisees": "DS011111",
      "VersionScenario": "1.0.1",
    },
  },
}
`;

exports[`import un fichier de l'EDI Sacha RAI example-rai-1.xml 1`] = `
{
  "Resultats": {
    "Destinataire": {
      "EmailPartenaire": "dgal@gouv.fr",
      "LibellePartenaire": "DDSV des Côtes-d'Armor",
      "Sigle": "DDSV22",
    },
    "DialogueResultatType": {
      "DialogueCommemoratif": [
        {
          "Sigle": "DATRECPREL",
          "TexteValeur": "2025-01-01",
        },
      ],
      "DialogueEchantillonCommemoratifType": [
        {
          "DialogueEchantillonComplet": {
            "DateRealisationPrelevement": "2025-01-01",
            "IdentifiantLabo": "1111/111/1",
            "NumeroEchantillon": 1,
            "NumeroEtiquette": "000000",
            "NumeroIdentificationExterne": "2025010101",
            "SigleMatriceSpecifique": "FOIE_BV",
          },
        },
      ],
      "DialoguePlanAnalyseType": [
        {
          "DialogueAnalyseType": [
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ALDR_DLDR",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ALD",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DIELDR",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CLRDN_AGOX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLRDN_CS",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLRDN_TR",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLRDN_OX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLBNZ",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CLRTLNL",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.035",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DDT_ISOM",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DDT_OP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DDT_PP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "TDE_PP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DDE_PP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DCFL",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.020",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DCFL_OP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.020",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DCFL_PP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.020",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ENDSLFN_ABSF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ENDSLF_ALP",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ENDSLF_BT",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ENDSLF_SLF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "ENDRN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.020",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HPTCL_HEPX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.020",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HPTCL",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HCB",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HCHALPHA",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HCHBETA",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HCHGAMMA",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "MTHXCL",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PNDMTH",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.025",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "HPTCL_EPX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
          ],
          "DialogueResultatEchantillonPlan": [
            {
              "IdentifiantLabo": "1111/111/1",
              "SigleConclusion": "CONFORM",
            },
          ],
          "ReferencePlanAnalyseEffectuer": {
            "PlanComplet": true,
            "SiglePlanAnalyse": "RestPest_DAOA",
          },
        },
        {
          "DialogueAnalyseType": [
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "AZNPHSTHL",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLORPY_ETHY",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLORPY_MET",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DIAZ",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.100",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.03,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DFLBZRN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DSFT_SFX_SF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DISULF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DSLFTNSLFON",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "DSFT_SFX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FMXD",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNTO_SFX_SF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNT",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNTOX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNTOX_SF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNTOX_SFX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNT_SF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "FNT_SFX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "IDXCB",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "METHCRFS",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "METHID",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.005",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.005,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PRTHPROXMT",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PRTHMT",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PROXMT",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PARTHN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CG_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PHOXSULN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PHOR",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PHRTOX",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PHRTSLF",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PIR_MET",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PROFNFS",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "PYRZPHS",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "TFLBZRN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.030",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "N",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.01,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "TRIAZ",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.010",
                },
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "2025-06-25",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-02",
                  "IdentifiantLabo": "1111/111/1",
                  "IncertitudePourcentage": 50,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "1234",
                  "OperateurResultatQuantitatif": "",
                  "SigleUnite": "MG_KG_PR",
                  "ValeurResultatQuantitatif": 0.003,
                },
              ],
            },
          ],
          "DialogueResultatEchantillonPlan": [
            {
              "IdentifiantLabo": "1111/111/1",
              "SigleConclusion": "CONFORM",
            },
          ],
          "ReferencePlanAnalyseEffectuer": {
            "PlanComplet": true,
            "SiglePlanAnalyse": "RestPest_DAOA",
          },
        },
        {
          "DialogueResultatEchantillonPlan": [
            {
              "IdentifiantLabo": "1111/111/1",
              "SigleConclusion": "CONFORM",
            },
          ],
          "ReferencePlanAnalyseEffectuer": {
            "PlanComplet": false,
            "SiglePlanAnalyse": "RestPest_DAOA",
          },
        },
      ],
      "DialogueRetourInterventionAvecDAP": {
        "DateInterventionReelle": "2025-01-01",
        "DossierComplet": false,
        "IdentifiantActeur": "DDSV22G01",
        "IndicateurPrelevementPartiel": "C",
        "NumeroDAP": 1111,
        "SigleTypeIdentifiantActeur": "DEPADM",
      },
    },
    "Emetteur": {
      "EmailPartenaire": "contact@labo1.fr",
      "LibellePartenaire": "LABO1",
      "Sigle": "LABO1",
    },
    "MessageParametres": {
      "CodeReferentielPrescripteur": "SIGAL",
      "CodeScenario": "E.D.I. SIGAL/LABOS",
      "NomFichier": "RA12341234",
      "NomLogicielCreation": "DIPLABO DLL-EI-SIGAL",
      "TypeFichier": "RA01",
      "VersionLogicielCreation": "V3.20b2a",
      "VersionReferencePrescripteur": "RP123",
      "VersionReferenceStandardisees": "DS1234",
      "VersionScenario": "1.0.1",
    },
  },
}
`;

exports[`import un fichier de l'EDI Sacha RAI example-rai-2.xml 1`] = `
{
  "Resultats": {
    "Destinataire": {
      "EmailPartenaire": "DGAL@gouv.fr",
      "LibellePartenaire": "DAAF",
      "Sigle": "DDS",
    },
    "DialogueResultatType": {
      "DialogueCommemoratif": [
        {
          "Sigle": "DATRECPRCF",
          "TexteValeur": "2025-01-01",
        },
        {
          "Sigle": "DATRECPREL",
          "TexteValeur": "2025-01-01",
        },
      ],
      "DialogueEchantillonCommemoratifType": [
        {
          "DialogueEchantillonComplet": {
            "DateRealisationPrelevement": "2025-01-01",
            "IdentifiantLabo": "E1234",
            "NumeroEchantillon": 1,
            "NumeroEtiquette": "1234",
            "NumeroIdentificationExterne": "ECHANTILLON 1",
            "SigleMatriceSpecifique": "FOIE_BV",
          },
        },
      ],
      "DialoguePlanAnalyseType": [
        {
          "DialogueAnalyseType": [
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLDCN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "01/01/2025",
                },
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.001",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "METHD_PRCS",
                  "TexteValeur": "ANSES PBM Pest LSA-INS-0164",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-01",
                  "IdentifiantLabo": "E251234",
                  "IncertitudeMaxi": 0.058,
                  "IncertitudeMini": 0.038,
                  "IncertitudePourcentage": 20,
                  "IndicateurAnalyseConfirmation": false,
                  "NumeroDossierLIMS": "S1234",
                  "OperateurResultatQuantitatif": "=",
                  "SigleUnite": "MG_KG_PR",
                  "SigleValeurResultatQualitatif": "SE_SUSP",
                  "ValeurResultatQuantitatif": 0.048,
                },
              ],
            },
            {
              "DialogueAnalyse": {
                "SigleAnalyte": "CHLDCN",
                "SigleMatriceSpecifique": "FOIE_BV",
                "SigleMethodeSpecifique": "CL_SM_SM",
              },
              "DialogueCommemoratif": [
                {
                  "Sigle": "ACCRDTTN",
                  "SigleValeur": "O",
                },
                {
                  "Sigle": "DANALYS",
                  "TexteValeur": "04/06/2025",
                },
                {
                  "Sigle": "LIMDET",
                  "TexteValeur": "0.001",
                },
                {
                  "Sigle": "LIMQUANT",
                  "TexteValeur": "0.003",
                },
                {
                  "Sigle": "METHD_PRCS",
                  "TexteValeur": "ANSES PBM Pest LSA-INS-0164",
                },
              ],
              "DialogueResultatEchantillonAnalyse": [
                {
                  "DateValidation": "2025-01-01",
                  "IdentifiantLabo": "E251234",
                  "IncertitudeMaxi": 0.056,
                  "IncertitudeMini": 0.038,
                  "IncertitudePourcentage": 19,
                  "IndicateurAnalyseConfirmation": true,
                  "NumeroDossierLIMS": "S1234",
                  "OperateurResultatQuantitatif": "=",
                  "SigleUnite": "MG_KG_PR",
                  "SigleValeurResultatQualitatif": "SE_DECI",
                  "ValeurResultatQuantitatif": 0.047,
                },
              ],
            },
          ],
          "DialogueResultatEchantillonPlan": [
            {
              "IdentifiantLabo": "E251234",
              "SigleConclusion": "NCONF",
            },
          ],
          "ReferencePlanAnalyseEffectuer": {
            "PlanComplet": true,
            "SiglePlanAnalyse": "RestPest_DAOA",
          },
        },
      ],
      "DialogueRetourInterventionAvecDAP": {
        "DateInterventionReelle": "2025-01-01",
        "DossierComplet": true,
        "IdentifiantActeur": "DAAF972",
        "IndicateurPrelevementPartiel": "C",
        "NumeroDAP": 12345,
        "SigleTypeIdentifiantActeur": "DEPADM",
      },
    },
    "Emetteur": {
      "EmailPartenaire": "laboratoire@labo.fr",
      "LibellePartenaire": "Laboratoire",
      "Sigle": "LABO2",
      "Telephone": "0101010101",
    },
    "MessageParametres": {
      "CodeReferentielPrescripteur": "SIGAL",
      "CodeScenario": "E.D.I. SIGAL/LABOS",
      "NomFichier": "RA1234",
      "NomLogicielCreation": "BDI",
      "TypeFichier": "RA01",
      "VersionLogicielCreation": "1.01",
      "VersionReferencePrescripteur": "RP01",
      "VersionReferenceStandardisees": "DS01",
      "VersionScenario": "1.0.1",
    },
  },
}
`;
